enh: add support for lambdas and jackson-style stacktraces in our Java stacktrace parser